tests/ui/entry-point/return-ty-has-bound-vars.stderr
error[E0131]: `main` function return type is not allowed to have generic parameters
  --> $DIR/return-ty-has-bound-vars.rs:3:28
   |
LL | fn main<'a>(_: &'a i32) -> &'a () { &() }
   |                            ^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0131`.
